welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: type mismatch;
 found   : Unit
 required: Boolean
{
^